--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,16 @@ html {
     width: 70%;
     margin-top: 12px;
   }
+
+  .FooterContainer {
+    position: relative;
+    width: 100%;
+    background-color: rgba(0,0,0, 0.8);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url("/footer.jpg") !important;
+  }
 }
 
 @media (max-width: 1400px) {
@@ -225,6 +235,16 @@ html {
 
   .menuContainerThin {
     width: 25% !important;
+  }
+
+  .FooterContainer {
+    position: relative;
+    width: 100%;
+    background-color: rgba(0,0,0, 0.8);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url("/footer.jpg") !important;
   }
 }
 
@@ -344,6 +364,16 @@ html {
 
   .menuContainerThin {
     width: 30% !important;
+  }
+
+  .FooterContainer {
+    position: relative;
+    width: 100%;
+    background-color: rgba(0,0,0, 0.8);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url("/footer.jpg") !important;
   }
 }
 
@@ -469,6 +499,16 @@ html {
 
   .menuContainerThin {
     width: 30% !important;
+  }
+
+  .FooterContainer {
+    position: relative;
+    width: 100%;
+    background-color: rgba(0,0,0, 0.8);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url("/footer.jpg") !important;
   }
 
 }
@@ -597,6 +637,16 @@ html {
     width: 30% !important;
   }
 
+  .FooterContainer {
+    position: relative;
+    width: 100%;
+    background-color: rgba(0,0,0, 0.8);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url("/footer.jpg") !important;
+  }
+
 }
 
 @media (max-width: 650px) {
@@ -723,6 +773,16 @@ html {
 
   .menuContainerThin {
     width: 35% !important;
+  }
+
+  .FooterContainer {
+    position: relative;
+    width: 100%;
+    background-color: rgba(0,0,0, 0.8);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url("/footer.jpg") !important;
   }
 
 }
@@ -971,16 +1031,6 @@ html {
   color: #FEFFD8;
 }
 
-.FooterContainer {
-  position: relative;
-  width: 100%;
-  background-color: rgba(0,0,0, 0.8);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-image: url("/footer.jpg");
-}
-
 .FooterCredits {
   width: 100%;
   height: 50px;
@@ -1118,7 +1168,7 @@ html {
 
 .menuBackgroundColor {
   width: 100%;
-  background-image: url("/flower-3.jpg");
+  background-image: url("/flower.jpg");
 }
 
 .homeBackgroundColor {
