--- a/src/App.css
+++ b/src/App.css
@@ -323,7 +323,7 @@ html {
     width: 80%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     font-size: 13px;
     color: white;
     margin-bottom: 12px;
@@ -337,8 +337,12 @@ html {
     justify-content: space-between;
   }
 
+  .hide {
+    display: none !important;
+  }
+
   .hoursContainer {
-    width: 170px !important;
+    width: 240px !important;
   }
 
   .footerRow {
@@ -458,10 +462,11 @@ html {
     width: 85%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     font-size: 12px;
     color: white;
     margin-bottom: 12px;
+    padding-bottom: 6px;
   }
 
   .hoursDay {
@@ -473,7 +478,7 @@ html {
   }
 
   .hoursContainer {
-    width: 150px !important;
+    width: 230px !important;
   }
 
   .footerRow {
@@ -594,14 +599,14 @@ html {
     width: 90%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     font-size: 11px;
     color: white;
     margin-bottom: 11px;
   }
 
   .hoursDay {
-    font-size: 11px;
+    font-size: 10px;
     margin-top: -16px;
     display: flex;
     flex-direction: row;
@@ -609,7 +614,7 @@ html {
   }
 
   .hoursContainer {
-    width: 150px !important;
+    width: 200px !important;
   }
 
   .footerRow {
@@ -728,11 +733,10 @@ html {
   }
 
   .Footer {
-    display: none !important;
     width: 90%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     font-size: 10px;
     color: white;
     margin-bottom: 10px;
@@ -747,11 +751,11 @@ html {
   }
 
   .hoursContainer {
-    width: 150px !important;
+    width: 190px !important;
   }
 
   .footerRow {
-    width: 270px;
+    width: 210px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -923,7 +927,7 @@ html {
 
   .hoursContainer {
     margin: 0 auto;
-    width: 70% !important;
+    width: 76% !important;
     font-size: 14px;
   }
 
@@ -934,7 +938,7 @@ html {
   }
 
   .hoursDay {
-    font-size: 14px;
+    font-size: 13px;
     margin-top: -16px;
     display: flex;
     flex-direction: row;
@@ -1033,15 +1037,15 @@ html {
 
 .FooterCredits {
   width: 100%;
-  height: 50px;
+  height: 45px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.9);
 }
 
 .FooterCreditsText {
-  margin-bottom: -16px;
   font-size: 10px;
   color: white;
 }
@@ -1066,7 +1070,7 @@ html {
 }
 
 .hoursContainer {
-  width: 180px;
+  width: 260px;
 }
 
 .menuBackground {
